Added About page

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
         <link href="resources/css/main.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>
-            Website titlr
+            What is white supremacy
         </title>
     </head>
 
     <body>
         <nav>
-            <h1><a href="#">What is white supremacy</a> </h1>
+            <h1><a href="/index.html">What is white supremacy</a></h1>
 
             <div id="menu">
-                <h3><a href="#">About</a></h3>
+                <h3><a href="./html/about.html">About</a></h3>
             </div>
         </nav>
 
-        <div id="main">
+        <div class="main">
 
             <div id="description">
                 <p>
