--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
 
         <div class="main">
             <p>
-                For comments, suggestions, or questions, reach out to WhatIsWhiteSupremacy@protonmail.com.
+                For comments, suggestions, or questions, reach out to <a href="mailto:WhatIsWhiteSupremacy@protonmail.com">WhatIsWhiteSupremacy@protonmail.com</a>.
             </p>
         </div>
 
