--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="main">
 
             <div id="description">
-                <p>
-                    White supremacy is "a political, economic and cultural system in which whites overwhelmingly control power and material resources, conscious and unconscious ideas of white superiority and entitlement are widespread, and relations of white dominance and non-white subordination are daily reenacted across a broad array of institutions and social settings."
-                </p>
+                <p>We are raised to believe that white supremacy is limited to a marginal number of racist extremists, to those who see whites as biologically and culturally superior: the KKK, white nationalists, the alt-right, etc. That is a falsehood, a convenient one that removes the responsibility for racism to others, to bad people we don’t have anything to do with. White supremacy is all around us. We all participate in white supremacy, whether we like it or not.</p>
+                <br>
+                <p>In case the words from the very people who are affected by white supremacy every day are not enough to convince us (and they should be enough), there is plenty of evidence that white supremacy is systemic, that it's everywhere, and that it keeps people of color, particularly black people, down in all aspects of life.</p>
             </div>
 
 <!--START MEDIA-->
@@ -100,6 +100,18 @@
                             <p><a target= _blank href="https://www.ncbi.nlm.nih.gov/books/NBK220355/">Summary</a> | <a target= _blank href="https://www.ncbi.nlm.nih.gov/books/NBK220358/">Full study (2002)</a> </p>
                         </div>
                     </div>
+
+                    <button class="accordion">Widely used healthcare algorithms assign black people lower risk scores than equally sick white people, referring them less to more personalized care programmes.</button>
+                    <div class="accordion-content">
+                        <div class="content">
+                            <p>An algorithm widely used in US hospitals was less likely to refer black people than white people who were equally sick to programmes that aim to improve care for patients with complex medical needs. Hospitals and insurers use the algorithm and others like it to help manage care for about 200 million people in the United States each year.</p>
+                            <br>
+                            <p>Remedying this disparity would increase the percentage of Black patients receiving additional help from 17.7 to 46.5%.</p>
+                            <p><a target= _blank href="https://www.nature.com/articles/d41586-019-03228-6">Read more</a> | <a target= _blank href="https://www.science.org/lookup/doi/10.1126/science.aax2342">Full study (2019)</a></p>
+                        </div>
+                    </div>
+
+
 
 <!--END HEALTH-->
 
