--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
                     <button class="accordion">Racial and ethnic minorities experience a lower quality of health services and are less likely to receive even routine medical procedures than are white Americans</button>
                     <div class="accordion-content">
                         <div class="content">
-                            <p>A large body of published research reveals that racial and ethnic minorities experience a lower quality of health services, and are less likely to receive even routine medical procedures than are white Americans.
+                            <p>A large body of published research reveals that racial and ethnic minorities experience a lower quality of health services, and are less likely to receive even routine medical procedures than are white Americans.</p>
                             <br>
-                            <b>Even when variations in such factors as insurance status, income, age, co-morbid conditions, and symptom expression are taken into account</b>, African Americans – and in some cases, Hispanics – are less likely to receive appropriate cardiac medication or to undergo coronary artery bypass surgery, are less likely to receive hemodialysis and kidney transplantation, and are likely to receive a lower quality of basic clinical services such as intensive care.
-                            </p>
+                            <p><b>Even when variations in such factors as insurance status, income, age, co-morbid conditions, and symptom expression are taken into account</b>, African Americans – and in some cases, Hispanics – are less likely to receive appropriate cardiac medication or to undergo coronary artery bypass surgery, are less likely to receive hemodialysis and kidney transplantation, and are likely to receive a lower quality of basic clinical services such as intensive care.</p>
                             <br>
                             <p><a target= _blank href="https://www.ncbi.nlm.nih.gov/books/NBK220355/">Summary</a> | <a target= _blank href="https://www.ncbi.nlm.nih.gov/books/NBK220358/">Full study (2002)</a> </p>
                         </div>
@@ -107,6 +106,7 @@
                             <p>An algorithm widely used in US hospitals was less likely to refer black people than white people who were equally sick to programmes that aim to improve care for patients with complex medical needs. Hospitals and insurers use the algorithm and others like it to help manage care for about 200 million people in the United States each year.</p>
                             <br>
                             <p>Remedying this disparity would increase the percentage of Black patients receiving additional help from 17.7 to 46.5%.</p>
+                            <br>
                             <p><a target= _blank href="https://www.nature.com/articles/d41586-019-03228-6">Read more</a> | <a target= _blank href="https://www.science.org/lookup/doi/10.1126/science.aax2342">Full study (2019)</a></p>
                         </div>
                     </div>
