--- a/html/about.html
+++ b/html/about.html
@@ -18,9 +18,12 @@
         </nav>
 
         <div class="main">
-            <p>
-                For comments, suggestions, or questions, reach out to <a href="mailto:WhatIsWhiteSupremacy@protonmail.com">WhatIsWhiteSupremacy@protonmail.com</a>.
-            </p>
+            <div id="about">
+                <p>For comments, suggestions, or questions, reach out to <a href="mailto:raphmim@protonmail.com">raphmim@protonmail.com</a>.</p>
+                <br>
+                <p>This website is open-source. You can contribute <a target= _blank href="https://github.com/raphmim/what-is-white-supremacy">here on Github</a></p>
+            </div>
+
         </div>
 
     </body>
