Added vets benefits stufy

--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
                             <p><a target= _blank href="https://www.nature.com/articles/d41586-019-03228-6">Read more</a> | <a target= _blank href="https://www.science.org/lookup/doi/10.1126/science.aax2342">Full study (2019)</a></p>
                         </div>
                     </div>
+                    <button class="accordion">Though they have higher rates of PTSD, Black veterans are more often denied veteran benefits for PTSD than white veterans.</button>
+                    <div class="accordion-content">
+                        <div class="content">
+                            <p>An internal Veterans Affairs report shows Black veterans were more often denied benefits for post-traumatic stress disorder than their white counterparts.</p>
+                            <br>
+                            <p>The analysis crunched claims data from fiscal year 2011 through 2016 and showed that Black veterans seeking disability benefits for PTSD were denied 57% of the time, compared to 43% for white veterans.</p>
+                            <br>
+                            <p>The analysis is significant because research has shown that minority vets had higher rates (5.8%) of PTSD than nonminority veterans (5%). Black Vietnam veterans were found to have higher rates of PTSD, in part because they were more likely to be in combat than their white counterparts.</p>
+                            <br>
+                            <p><a target= _blank href="https://www.nbcnews.com/health/mental-health/black-veterans-denied-va-benefits-ptsd-more-often-whites-rcna75334">Read more</a></p>
+                        </div>
+                    </div>
 
 
 
