simplified intro text

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="main">
 
             <div id="description">
-                <p>We are raised to believe that white supremacy is limited to a marginal number of racist extremists: the KKK, white nationalists, the alt-right, etc. That is a falsehood, a convenient one that removes the responsibility for racism to others, to bad people we don’t have anything to do with. White supremacy is all around us.</p>
+                <p>We are raised to believe that white supremacy is limited to extremists: KKK, white nationalists, the alt-right, etc. That is a falsehood that removes the responsibility for racism to others, to bad people we don’t have anything to do with. White supremacy is all around us.</p>
                 <br>
-                <p>In case the words from the very people who are affected by white supremacy every day are not enough (and they should be), there is plenty of scientific evidence that white supremacy is systemic, that it's everywhere, and that it keeps people of color, particularly black people, down--in all aspects of life.</p>
+                <p>In case the words from the people who are affected by white supremacy are not enough (and they should be), this website lists some of the scientific evidence that shows that white supremacy is systemic, that it's everywhere, and that it keeps people of color, particularly black people, down in all aspects of life.</p>
             </div>
 
 <!--START MEDIA-->
